dist/1.0/bin/sample/retrieveUnpackaged/objects/Open_Funnel_Snapshot_Domestic__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <label>Contract Length [months]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Service_Activ__c</fullName>
        <label>Exp. Service Activ.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <label>GTS Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_converted__c</fullName>
        <label>Monthly Fee (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta__c</fullName>
        <label>Monthly Revenue Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Delta_converted__c</fullName>
        <label>Monthly Revenue Delta (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price__c</fullName>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPP_Created_Date__c</fullName>
        <label>Opp. Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Monthly_Amount__c</fullName>
        <label>Opportunity Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Name__c</fullName>
        <label>Opportunity Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_Details__c</fullName>
        <label>Opportunity Type Details</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date, when snapshot was executed</description>
        <inlineHelpText>Date, when snapshot was executed</inlineHelpText>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>Open Funnel Snapshot Domestic</label>
    <nameField>
        <displayFormat>OFS-{0000000000}</displayFormat>
        <label>Open Funnel Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Funnel Snapshots Domestic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>